<resources>
    <string name="app_name">ourTime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">计时</string>
    <string name="menu_theme">主题色</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>

    <string name="edit_title">标题</string>
    <string name="edit_title_desc">生日,节日,考试...</string>
    <string name="edit_remark">备注</string>
    <string name="edit_remark_desc">想说的话,目标,格言...</string>

    <string name="date">日期</string>
    <string name="date_desc">点击编辑日期</string>
    <string name="loop">循环设置</string>
    <string name="loop_dialog_title">周期</string>
    <string name="loop_dialog_hint">输入周期(天)</string>
    <string name="loop_desc">暂无</string>
    <string name="photo">添加图片</string>
    <string name="labels">添加标签</string>
    <string name="labels_new">添加新标签</string>
    <string name="labels_add_hint">请输入新标签</string>
    <string name="labels_desc">暂无</string>

    <string name="back">取消</string>
    <string name="edit">修改</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="delete_event">是否删除该事件</string>
    <string name="confirm">确认</string>

    <string name="time_status_pass">已经</string>
    <string name="time_status_not_yet">还有</string>

    <string name="detail_item_notices">通知栏</string>

</resources>
